mdapipkg/unpackaged/objects/Schedule_Portal__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Schedule Portal</relationshipLabel>
        <relationshipName>Schedule_Portal</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>TX</fullName>
                </value>
                <value>
                    <fullName>NY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <label>Street Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Schedule Portal</label>
    <nameField>
        <label>Schedule Portal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Schedule Portal</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>